replace color names

--- a/static/styles/account/settings.scss
+++ b/static/styles/account/settings.scss
@@ -9,7 +9,7 @@
 
   .btn-default {
     margin-top: 20px;
-    background-color: $colorHPIRed;
+    background-color: $primaryColor;
     color: #ffffff;
   }
 
@@ -24,7 +24,7 @@
   }
 
   h4 {
-    color: $colorHPIRed;
+    color: $primaryColor;
   }
 }
 
