--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -78,10 +78,10 @@ h1, h3 {
 }
 .tooltip-inner {
   color: white ;
-  background-color: $colorHPIRed;
+  background-color: $primaryColor;
 }
 .tooltip-arrow{
-  background-color: $colorHPIRed;
+  background-color: $primaryColor;
 }
 .tooltip-demo{
   cursor: pointer;
