--- a/static/styles/files/upload.scss
+++ b/static/styles/files/upload.scss
@@ -60,7 +60,7 @@
 
       .bar {
         border-radius: 5px;
-        background-color: $colorHPIOrange;
+        background-color: $secondaryColor;
         height: 100%;
         z-index: 5;
         position: relative;
