--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -42,7 +42,7 @@
   }
   h5 {
     margin: 0;
-    color: $colorHPIRed;
+    color: $primaryColor;
   }
   .description {
     margin: 10px 0;
@@ -59,7 +59,7 @@
     h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
     h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
     p  {font-size: 1rem;margin-bottom:.25rem;}
-    a  {text-decoration: underline; color: $colorHPIRed;}
+    a  {text-decoration: underline; color: $primaryColor;}
     blockquote{
       color: grey;
       margin-left: 1rem;
