--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -116,7 +116,7 @@
         border-bottom-right-radius: 2px;
         a, button {
             float:right;
-            color: $colorHPIRed;
+            color: $primaryColor;
             border: none;
             border-radius: 2px;
             min-width: 64px;
