--- a/static/styles/administration/course.scss
+++ b/static/styles/administration/course.scss
@@ -23,7 +23,7 @@
         margin-top: 10px;
         padding-left: 5px;
         cursor: pointer;
-        color: $colorHPIRed;
+        color: $primaryColor;
     }
 }
 
