--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -3,7 +3,7 @@
 .teacher-option {
   h4 {
     padding-top: 20px;
-    color: $colorHPIRed
+    color: $primaryColor
   }
   text-align: center;
   cursor: pointer;
