--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -101,7 +101,7 @@
             margin-top: 10px;
             padding-left: 5px;
             cursor: pointer;
-            color: $colorHPIRed;
+            color: $primaryColor;
         }
     }
 
@@ -121,7 +121,7 @@
 
         .geo-gebra-info {
             color: white;
-            background-color: $colorHPIRed;
+            background-color: $primaryColor;
         }
     }
 }
@@ -131,7 +131,7 @@
     cursor: pointer;
 
     i {
-        color: $colorHPIRed;
+        color: $primaryColor;
     }
 }
 
