--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -97,7 +97,7 @@
             .card {
                 border:0px;
                 background:#e9e9e9;
-                border-top:6px solid $colorHPIYellow;
+                border-top:6px solid $accentColor;
                 border-bottom: 6px solid transparent;
                 color: #646464;
                 height:170px;
@@ -124,12 +124,12 @@
 
                 &.disabled {
                     border-top:6px solid transparent;
-                    border-bottom: 6px solid $colorHPIRed;
+                    border-bottom: 6px solid $primaryColor;
                     background: #f5f5f5;
                     color: #a9a9a9;
 
                     &:after {
-                        color:$colorHPIRed;
+                        color:$primaryColor;
                         content: attr(data-status);
                         bottom:5px;
                         right:10px;
@@ -162,7 +162,7 @@
                 height: 245px;
                 content: '';
                 width: 2px;
-                background: $colorHPIRed;
+                background: $primaryColor;
                 right: 0px;
                 position: absolute;
                 bottom: 0px;
@@ -175,7 +175,7 @@
                 position:absolute;
                 top: -28px;
                 background: #FFFFFF;
-                color: $colorHPIRed;
+                color: $primaryColor;
                 display: block;
                 z-index: 2;
             }
