--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -13,12 +13,12 @@
 
   h4 {
     margin-bottom: 20px;
-    color: $colorHPIRed;
+    color: $primaryColor;
   }
 
   i {
     padding-right: 5px;
-    color: $colorHPIRed;
+    color: $primaryColor;
   }
 }
 
