--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -91,7 +91,7 @@
   }
 
   .nav-item.active {
-    border-bottom: 1px solid $colorHPIOrange;
+    border-bottom: 1px solid $secondaryColor;
   }
   .feedback {
     max-width: 100%;
@@ -152,7 +152,7 @@
   .fa-active {
     float: right;
     .fa {
-      color: $colorHPIRed;
+      color: $primaryColor;
       cursor: pointer;
     }
   }
