--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -5,7 +5,7 @@ body {
 }
 .error-page {
     h3 {
-        color: $colorHPIRed;
+        color: $primaryColor;
         font-size: 5rem;
         font-weight: 700;
         margin: 0;
