--- a/theme/default/style.scss
+++ b/theme/default/style.scss
@@ -1,3 +1,3 @@
-$colorHPIRed: #b10438;
-$colorHPIOrange: #e2661d;
-$colorHPIYellow: #f8a41b;
+$primaryColor: #82AAE0;
+$secondaryColor: #e2661d;
+$accentColor: #f8a41b;
