--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -1,3 +1,3 @@
-$colorHPIRed: #00FF00;
-$colorHPIOrange: #FF0000;
-$colorHPIYellow: #b10438;
+$primaryColor: #00FF00;
+$secondaryColor: #FF0000;
+$accentColor: #b10438;
