changed more color usage

--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -74,7 +74,7 @@
     padding: 5px 0 5px 10px;
     clear: both;
     text-align: right;
-    color: #b10438;
+    color: $primaryColor;
     text-decoration: none;
   }
 }
