--- a/static/styles/lib/bootstrap/scss/_custom.scss
+++ b/static/styles/lib/bootstrap/scss/_custom.scss
@@ -31,7 +31,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #b10438 !default;
+$brand-primary:             $primaryColor !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
