--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -12,7 +12,7 @@
 }
 h1, h3 {
     margin-top: 30px;
-    color: #b10438;
+    color: $primaryColor;
 }
 .carousel-item, .card {
     align-items: center;
@@ -44,7 +44,7 @@ h1, h3 {
     cursor: pointer;
 }
 .card-img-overlay {
-    color: #b10438;
+    color: $primaryColor;
     padding: 10px;
     bottom: auto;
     z-index: 10;
