wip image and title theming

--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -1,3 +1,5 @@
-$primaryColor: #82AAE0;
+$primaryColor: #78aae5;
 $secondaryColor: #FF0000;
 $accentColor: #b10438;
+
+$logoBackground: url("../../images/logo/logo-wt.png") no-repeat center;
