--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -39,7 +39,7 @@
                     <li>
                         <a class="sc-branding" href="/">
                             <div class="cloud-logo"></div>
-                            <span>Schul-Cloud</span>
+                            <span>{{themeTitle}}</span>
                         </a>
                     </li>
                     {{#each sidebarItems}}
