--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -39,7 +39,7 @@ aside.nav-sidebar {
     .sc-branding {
         display: block;
         padding: 15px;
-        font-size: 25px;
+        font-size: 24px;
         background: $primaryColor;
         color: whitesmoke;
         text-decoration: none;
@@ -52,7 +52,7 @@ aside.nav-sidebar {
             height: 30px;
             margin-bottom: -5px;
             margin-right: 0.25rem;
-            background: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
+            background: $logoBackground;
             background-size: contain;
             @include media-breakpoint-down(md) {
                 width: 100%;
