small changes + gulp improvements

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -105,6 +105,12 @@ footer.small-footer {
 			text-align: center;
 			align-items: center;
 		}
+        img{
+            width: auto;
+            max-width: 235px;
+            height: auto;
+            max-height: 44px;
+        }
 	}
 }
 
