--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="hide-inline small-footer">
     <div class="imprint">
         <div class="center">
-            <img src="/images/hpi-logo.png" width="235" height="44" />
+            <img src="/images/footer-logo.png"/>
             <a>&copy; 2018 Schul-Cloud </a>
 
             <nobr>
