Added Tel and Fax Numbers

--- a/views/imprint/imprint.hbs
+++ b/views/imprint/imprint.hbs
@@ -1,6 +1,6 @@
 <div class="section-imprint">
     <h5><strong>Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH</strong></h5>
-    <p>Prof.-Dr.-Helmert-Str. 2-3 <br /> 14482 Potsdam <br /> Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a> <br /> Internet: <a href="https://schul-cloud.org" target="_blank">https://schul-cloud.org</a></p>
+    <p>Prof.-Dr.-Helmert-Str. 2-3 <br /> 14482 Potsdam <br /> Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a> <br /> Internet: <a href="https://schul-cloud.org" target="_blank">https://schul-cloud.org</a> <br /> Telefon: +49 (0)331 / 5509-0  <br /> Telefax: +49 (0)331 / 5509-129</p>
     <h5><strong>Vertretungsberechtigter Gesch&auml;ftsf&uuml;hrer:</strong></h5>
     <p>Prof. Dr. Christoph Meinel<br /> Registergericht: Amtsgericht Potsdam, Registernummer: HRB 12184<br /> Inhaltlich Verantwortlich gem&auml;&szlig; &sect; 6 MDStV: Prof. Dr. Christoph Meinel</p>
     <h5><strong>Redaktion:</strong></h5>
