--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -21,6 +21,8 @@
                 {{/if}}
 
                 <input name="courseId" type="hidden" data-force-value="true" value="{{courseId}}" />
+
+                <input name="courseGroupId" type="hidden" data-force-value="true" value="{{courseGroupId}}" />
                 
                 <input name="position" type="hidden" data-force-value="true" value="{{lesson.position}}" />
 
