--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -63,69 +63,79 @@
                 </div>
             {{/if}}
 
-            {{#userHasPermission "COURSE_EDIT"}}
+            {{#if isCourseGroupTopic}}
                 <div class="row padding-top">
                     <div class="col-sm-12">
-                        <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Thema
+                        <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit?courseGroup={{../courseGroupId}}" class="btn btn-add btn-primary">Thema
                             bearbeiten</a>
-                        <a href="#"
-                           data-href="{{../_id}}"
-                           data-courseId="{{../courseId}}"
-                           class="btn btn-add btn-secondary btn-create-share">Thema mit anderen Lehrern teilen</a>
                     </div>
                 </div>
-            {{/userHasPermission}}
+            {{else}}
+                {{#userHasPermission "COURSE_EDIT"}}
+                    <div class="row padding-top">
+                        <div class="col-sm-12">
+                            <a href="/courses/{{../courseId}}/topics/{{../_id}}/edit" class="btn btn-add btn-primary">Thema
+                                bearbeiten</a>
+                            <a href="#"
+                            data-href="{{../_id}}"
+                            data-courseId="{{../courseId}}"
+                            class="btn btn-add btn-secondary btn-create-share">Thema mit anderen Lehrern teilen</a>
+                        </div>
+                    </div>
+                {{/userHasPermission}}
+            {{/if}}
 
-            <hr/>
-
-            <div class="row">
-                <div class="col-sm-6 container">
-                    {{#userHasPermission "HOMEWORK_CREATE"}}
-                    <a href="/homework/new?course={{../courseId}}&topic={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
-                        <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span>
-                    </a>
-                    {{/userHasPermission}}
-                    <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
-                        <h4>
-                            <small data-toggle="tooltip" title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-                            Gestellte Aufgaben 
-                            <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
-                        </h4>
-                    </a>
-                    <div id="homeworks" class="container-fluid collapse">
-                        <ol class="homework">
-                            <div class="row">
-                                {{#each homeworks}}
-                                    {{> 'homework/components/course_overview_card_template'}}
-                                {{/each}}
-                            </div>
-                        </ol>
+            {{#unless isCourseGroupTopic}}
+                <hr/>
+                 <div class="row">
+                    <div class="col-sm-6 container">
+                        {{#userHasPermission "HOMEWORK_CREATE"}}
+                        <a href="/homework/new?course={{../courseId}}&topic={{../_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Aufgabe hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Aufgabe hinzufügen</span>
+                        </a>
+                        {{/userHasPermission}}
+                        <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
+                            <h4>
+                                <small data-toggle="tooltip" title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+                                Gestellte Aufgaben 
+                                <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
+                            </h4>
+                        </a>
+                        <div id="homeworks" class="container-fluid collapse">
+                            <ol class="homework">
+                                <div class="row">
+                                    {{#each homeworks}}
+                                        {{> 'homework/components/course_overview_card_template'}}
+                                    {{/each}}
+                                </div>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        {{#userHasPermission "HOMEWORK_CREATE"}}
+                        <a href="/homework/new?course={{../courseId}}&topic={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="private Aufgabe hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
+                        </a>
+                        {{/userHasPermission}}
+                        <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
+                            <h4>
+                                <small data-toggle="tooltip" title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
+                                Meine Aufgaben 
+                                <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
+                            </h4>
+                        </a>
+                        <div id="myhomeworks" class="container-fluid collapse">
+                            <ol class="homework">
+                                <div class="row">
+                                    {{#each myhomeworks}}
+                                        {{> 'homework/components/course_overview_card_template'}}
+                                    {{/each}}
+                                </div>
+                            </ol>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    {{#userHasPermission "HOMEWORK_CREATE"}}
-                    <a href="/homework/new?course={{../courseId}}&topic={{../_id}}&private=true" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="private Aufgabe hinzufügen">
-                        <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> private Aufgabe hinzufügen</span>
-                    </a>
-                    {{/userHasPermission}}
-                    <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
-                        <h4>
-                            <small data-toggle="tooltip" title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
-                            Meine Aufgaben 
-                            <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
-                        </h4>
-                    </a>
-                    <div id="myhomeworks" class="container-fluid collapse">
-                        <ol class="homework">
-                            <div class="row">
-                                {{#each myhomeworks}}
-                                    {{> 'homework/components/course_overview_card_template'}}
-                                {{/each}}
-                            </div>
-                        </ol>
-                    </div>
-                </div>
-            </div>
+            {{/unless}}
 
             {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
                 {{#content "body"}}
