--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -17,6 +17,7 @@
         min-height: 6rem;
         padding: 1.5rem .5rem .5rem;
         color: #fff;
+        text-decoration: none !important;
         background-color: #70b5ce;
         border-top-left-radius: 2px;
         border-top-right-radius: 2px;
@@ -31,9 +32,8 @@
             background-image: linear-gradient(to top, rgba(0,0,0,.1) 0%, transparent 85%);
         }
         .sc-card-title {
-            a {
+            .title {
                 color: inherit;
-                text-decoration: none !important;
             }
             align-self: flex-end;
             font-weight: 700;
