students can now add materials to coursegroup-topics

--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -7,5 +7,6 @@
                    class="form-control search-field"
                    placeholder="Suche in {{ totalCount }} Materialien... "/>
         </div>
+        <input type="hidden" name="isCourseGroupTopic" value="{{ isCourseGroupTopic }}" />
     </div>
 </form>
